--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/server": "^10.9.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "@next/font": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -26,10 +27,10 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
-    "@types/node": "^18.11.18",
+    "@types/node": "18.14.0",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
