--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.9.0",
+    "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "daisyui": "^2.51.0",
     "next": "13.1.6",
-    "next-auth": "^4.19.0",
-    "@next/font": "13.1.6",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
@@ -39,7 +43,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.4"
   },
