--- a/package.json
+++ b/package.json
@@ -1,53 +1,30 @@
 {
-  "name": "ticket-system",
+  "name": "ticket-system-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/font": "13.1.6",
-    "@prisma/client": "^4.10.1",
-    "@tanstack/react-query": "^4.20.2",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
+    "@types/node": "18.14.1",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "daisyui": "^2.51.0",
-    "next": "13.1.6",
-    "next-auth": "^4.19.2",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.2.1",
+    "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
-    "react-toastify": "^9.1.1",
-    "superjson": "1.9.1",
-    "zod": "^3.20.2"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.1",
-    "@types/node": "18.14.0",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.30.0",
-    "eslint-config-next": "13.1.6",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.10.1",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.5.6"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
