--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "daisyui": "^2.51.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
@@ -20,7 +21,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.5"
+    "react-toastify": "^9.1.1",
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
