--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.10.1",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -23,6 +22,7 @@
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
