--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.6.1",
     "typescript": "4.9.5",
