--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticket-system-app",
+  "name": "support-ticket-updated",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "daisyui": "^2.51.0",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "next": "13.4.4",
+    "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-activity": "^2.1.3",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.2",
-    "react-icons": "^4.7.1",
+    "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
-    "react-toastify": "^9.1.1",
-    "socket.io-client": "^4.6.1",
-    "typescript": "4.9.5",
-    "zod": "^3.20.6"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3"
   }
 }
