--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
     "@types/node": "20.2.5",
@@ -26,8 +27,13 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.7",
     "react-toastify": "^9.1.3",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/redux-logger": "^3.0.9"
   }
 }
