--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "eslint-config-next": "^13.4.9",
+    "next": "^13.4.9",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-activity": "^2.1.3",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-dom": "^18.2.0",
+"react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
